--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ blockquote {
     color: #2196F3 !important;
 }
 .primary-color {
-    background-color: #1ac897 !important;
+    background-color: #2B73AB !important;
 }
 .primary-border {
     border-color: #2196F3 !important;
@@ -640,7 +640,7 @@ footer.page-footer {
 #toolbar i {
     font-size: 24px;
     line-height: 56px;
-    color: #fff;
+    color: #2b73ab;
 }
 #toolbar .title {
     font-size: 22px;
@@ -893,11 +893,11 @@ footer.page-footer {
     opacity: 0.5;
 }
 .tabs .tab a.active {
-    color: #1ac897;
+    color: #2B73AB;
     opacity: 1;
 }
 .tabs .indicator {
-    background-color: #1ac897;
+    background-color: #2B73AB;
 }
 /* Searchbar */
 
@@ -930,7 +930,7 @@ input[type=number]:focus:not([readonly])+label,
 input[type=search]:focus:not([readonly])+label,
 textarea.materialize-textarea:focus:not([readonly])+label,
 .input-field .prefix.active {
-    color: #1ac897;
+    color: #2B73AB;
 }
 input[type=text]:focus:not([readonly]),
 input[type=password]:focus:not([readonly]),
@@ -943,12 +943,12 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #1ac897;
-    box-shadow: 0 1px 0 0 #1ac897;
+    border-bottom: 1px solid #2B73AB;
+    box-shadow: 0 1px 0 0 #2B73AB;
 }
 [type="radio"]:checked+label:after {
-    border: 2px solid #1ac897;
-    background-color: #1ac897;
+    border: 2px solid #2B73AB;
+    background-color: #2B73AB;
 }
 [type="checkbox"]:checked+label:before {
     border-right: 2px solid #2196F3;
@@ -2451,7 +2451,7 @@ span.data-color {
 
 .friends i {
     font-size: 20px;
-    color: #1ac897;
+    color: #2B73AB;
     margin-right: 10px;
 }
 
@@ -2466,4 +2466,18 @@ span.data-color {
 
 .vred{
 color : #c50202!important;
+}
+
+@font-face {
+    font-family: goodtime;
+    src: url("../font/good-times-rg.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+.goodtime {
+    font-family: 'goodtime' !important;
+    text-transform: uppercase !important;
+    font-weight: normal !important;
+
 }
