--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,7 @@ footer.page-footer {
 #toolbar i {
     font-size: 24px;
     line-height: 56px;
-    color: #fff;
+    color: #2B73AB;
 }
 #toolbar .title {
     font-size: 21px;
