--- a/css/style.css
+++ b/css/style.css
@@ -2494,3 +2494,24 @@ color : #c50202!important;
    width: 100px;
    display: inline;
 }
+.vehicle-no {
+    border: 1px solid #9e9e9e !important;
+    display: inline-block ;
+    margin-top: 15px !important;
+    width: 23.5% !important;
+    text-align: center;
+ }
+
+.vehicle-no:focus:not([readonly]) {
+    border-bottom: 1px solid #9e9e9e !important;
+    box-shadow: unset !important;
+}
+.form-label {
+    margin: 10px 0 !important;
+    font-size: 14px !important;
+    left: 0  !important; 
+
+}
+.vinput-field {
+    margin-top: 2rem;
+}
