--- a/css/style.css
+++ b/css/style.css
@@ -2497,9 +2497,9 @@ color : #c50202!important;
 .vehicle-no {
     border: 1px solid #9e9e9e !important;
     display: inline-block ;
-    margin-top: 15px !important;
-    width: 23.5% !important;
+    width: 20% !important;
     text-align: center;
+    margin: 20px  10px 5px 0 !important;
  }
 
 .vehicle-no:focus:not([readonly]) {
